<resources>
    <string name="app_name">Đổi đơn vị đo chiều dài</string>
    <string name="input_hint">Nhập số cần đổi</string>
    <string name="similar">Tương ứng với</string>
    <string name="haiLy_unit">Hải lý</string>
    <string name="dam_unit">Dặm</string>
    <string name="kilometer_unit">Kilometer</string>
    <string name="ly_unit">Lý</string>
    <string name="met_unit">Met</string>
    <string name="yard_unit">Yard</string>
    <string name="foot_unit">Foot</string>
    <string name="inch_unit">Inch</string>

</resources>