<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtNumber"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/input_hint"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spnUnit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_bg"
                android:text="@string/similar"
                android:textColor="@color/yellow_text"
                android:textSize="26sp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lbl_haily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/haiLy_unit"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lbl_dam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/dam_unit"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lbl_kilometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/kilometer_unit"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lbl_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/ly_unit"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lbl_met"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/met_unit"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lbl_Yard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/yard_unit"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lbl_foot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/foot_unit"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="10dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/lbl_Inches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/inch_unit"
                    android:textSize="18sp"
                    tools:ignore="RtlSymmetry" />

            </TableRow>




        </TableLayout>
    </ScrollView>


</LinearLayout>